--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="f__item"><a href="services.html">Services</a></li>
             <li class="f__item"><a href="contact.html">Contact</a></li>
         </ul>
-        <span class="f__end">© 2023 by Demi Watson. Proudly created with <a href="https://github.com/Alisher1412/"> Wix.com</a></span>
+        <span class="f__end">© 2021 by Demi Watson. Proudly created with <a href="https://github.com/Alisher1412/">Alisher Kambarov</a></span>
     </footer>
 </body>
 </html>
